bad/assign_var_int_bool.example_compiler_output
ERROR
[1mbad/assign_var_int_bool.lat:5:4: [1;31merror: [0;1massigning to `int` from incompatible type `boolean`[m
	x = true;
	  [1;32m^[m
